# maddevs

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
Task 2/: task2.py
backend/user/: models.py
main/: Dockerfile  entrypoint.sh  pyproject.toml
main/main/: settings.py  urls.py
main/tests/test_models/: test_patient.py  test_user.py
main/tests/test_permissions/: test_doctor.py
main/tests/test_serializers/: test_patient.py
main/tests/test_views/: test_auth.py  test_filter.py  test_page.py  test_patient.py  test_status_code_400.py  test_status_code_404.py  test_status_code_500.py
main/user/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
main/user/migrations/: 0001_initial.py  0002_patient_user_delete_patientmodel_patient_user.py  0003_alter_user_groups_alter_user_user_permissions.py  0004_alter_patient_user.py
